--- a/about/partnership.html
+++ b/about/partnership.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <!-- Last Published: Thu Feb 27 2025 21:26:03 GMT+0000 (Coordinated Universal Time) -->
-<html data-wf-domain="www.cadcam.org" data-wf-page="65a9345239f9abe067b962aa" data-wf-site="65a9345239f9abe067b961f9" lang="en" data-wf-locale="en">
+<html data-wf-domain="www.Roz.ma" data-wf-page="65a9345239f9abe067b962aa" data-wf-site="65a9345239f9abe067b961f9" lang="en" data-wf-locale="en">
     <head>
         <meta charset="utf-8" />
         <title>Let&#x27;s be Partners! | RO&Z Services INC.</title>
@@ -925,7 +925,7 @@ a,
                                 </div>
                                 <div class="margin-top margin-custom2">
                                     <div class="button-group">
-                                        <a href="#" class="button is-icon is-large w-inline-block">
+                                        <a href="/contact-us.html" class="button is-icon is-large w-inline-block">
                                             <div>contactez-nous</div>
                                             <div class="icon-embed-small w-embed">
                                                 <svg
